# playground-app-community

./: .env.example  .gitignore  .publish-ack.yml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEPLOY.MD  README.md  bulletin-deploy.config.ts  cdm.json  deny.toml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: deploy-contracts.yml  deploy-frontend.yml  deploy-to-bulletin.yml  e2e.yml  license.yml  release.yml
contracts/registry/: Cargo.toml  README.md  lib.rs
e2e/: README.md  TESTING_PLAN.md  a11y.spec.ts  accounts.ts  browse.spec.ts  bulletin-gateway.ts  chain.ts  detail.spec.ts  events.spec.ts  fixture-metadata.json  fixture.ts  fixtures.ts  funder.ts  helpers.ts  integration-boundaries.spec.ts  mobile-signer-login-reject.spec.ts  mobile-signer.spec.ts  mobile-smoke.spec.ts  my-apps.spec.ts  publish.spec.ts  rate.spec.ts  registry.ts  setup.ts  standalone-readonly.spec.ts  tsconfig.json  unpublish.spec.ts
scripts/: _lib.ts  add-admin.ts  check-license-headers.sh  check-migration.ts  check-revive-mapping.ts  cleanup-e2e-leaks.ts  diff-registry-state.ts  export-registry-state.ts  generate-dev-accounts.mjs  import-registry-state.ts  map-account.ts  measure-deploy-cost.ts  pin-apps.ts  publish-metadata.ts  register-context.ts  seed-e2e-fixture.mjs  smoke-test-points.ts  smoke-test-usernames.ts  test-tx.ts  verify-contracts.ts
src/: AboutTab.tsx  App.css  App.tsx  AppCard.test.tsx  AppDetailPanel.test.tsx  AppDetailPanel.tsx  AppsTab.tsx  CliInstallInstructions.tsx  CodeSnippet.tsx  CoverImageEditor.tsx  ErrorBanner.tsx  GrainCanvas.tsx  InstallWidget.test.tsx  InstructionTabs.tsx  IslandPortal.tsx  JourneySection.tsx  Leaderboard.test.tsx  Leaderboard.tsx  LeftRail.tsx  ModPopup.tsx  MyAppsWidget.tsx  PlaygroundTab.tsx  PlaygroundToc.tsx  PointsBreakdown.test.tsx  PointsBreakdown.tsx  PrizeList.tsx  ProfileTab.tsx  RewardLine.tsx  SectionBoundary.tsx  SetUsernameModal.tsx  SiteFooter.tsx  TestSentry.tsx  XpLabel.tsx  XpPrizesSection.tsx  config.ts  icons.tsx  main.tsx  publishFlow.test.ts  publishFlow.ts  questPalette.ts  (+12 more)
(+41 files in other folders)
