[workspace]
resolver = "2"
members = ["contracts/*"]

[workspace.package]
version = "0.1.0"
authors = ["CDM Example"]
homepage = "https://polkadot.com/"
edition = "2024"
license = "GPL-3.0-or-later"

[workspace.dependencies]
# git deps are pinned to specific commits for reproducible builds. To bump,
# run `cargo update -p <crate> --precise <new-sha>` and verify with
# `pnpm build:contracts`.
cdm = { git = "https://github.com/paritytech/contract-dependency-manager", rev = "2f646d5f10879da8e534edebb324fef29ea66a33" }
pvm-cdm = { git = "https://github.com/paritytech/contract-dependency-manager", rev = "2f646d5f10879da8e534edebb324fef29ea66a33" }
# pvm_contract uses `branch=` (matching `common`'s upstream reference from
# contract-developer-tools) so Cargo dedupes both references to one source.
# Switching to `rev=` here causes a duplicate-pvm_contract link error because
# `common` hard-codes the branch form. SHA is pinned via Cargo.lock; bump with
# `cargo update -p pvm_contract --precise <sha>`.
pvm_contract = { git = "https://github.com/paritytech/cargo-pvm-contract", branch = "charles/cdm-integration" }
polkavm-derive = "0.31"
parity-scale-codec = { version = "3.7", default-features = false, features = ["derive"] }
picoalloc = "5.2"
common = { git = "https://github.com/paritytech/contract-developer-tools", package = "common", rev = "f2f647ec390bc7e7fddd9cc43c88015b9351e002" }
